fix: remove blue highlight when tap on button on mobile

--- a/src/components/AppHeader/AppHeader.module.css
+++ b/src/components/AppHeader/AppHeader.module.css
@@ -27,4 +27,11 @@
   border: none;
   border-radius: 50%;
   background-color: var(--accent);
+  cursor: pointer;
+}
+
+@media (hover: none) {
+  .add__btn {
+    cursor: default;
+  }
 }
