--- a/src/components/FlashCard/FlashCardSide.module.css
+++ b/src/components/FlashCard/FlashCardSide.module.css
@@ -26,4 +26,11 @@
   height: 40px;
   background: none;
   border: none;
+  cursor: pointer;
+}
+
+@media (hover: none) {
+  .editBtn {
+    cursor: default;
+  }
 }
