--- a/src/components/NewCard/NewCard.module.css
+++ b/src/components/NewCard/NewCard.module.css
@@ -23,10 +23,17 @@
   right: 0;
   border: none;
   background: none;
+  cursor: pointer;
 }
 
 .frontPreview {
   width: 100%;
   margin-bottom: 8px;
   font-size: 12px;
+}
+
+@media (hover: none) {
+  .deleteBtn {
+    cursor: default;
+  }
 }
